--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://rnryt.gihtub.io/osisarmata",
   "type": "module",
   "scripts": {
     "dev": "vite",
